--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 
 
 
-  <meta name="author" content="Nelson Bighetti">
+  <meta name="author" content="Md. Aminul Islam">
 
 
 
 
 
 
-  <meta name="description" content="Professor of Artificial Intelligence">
+  <meta name="description" content="Software Engineer, Ridmik Labs Limited, Dhaka, Bangladesh">
 
 
   <link rel="alternate" hreflang="en-us" href="/">
@@ -60,7 +60,7 @@
 
 
 
-  <meta name="theme-color" content="#2962ff">
+  <meta name="theme-color" content="#FFFFFF">
 
 
 
@@ -254,7 +254,7 @@
 
 
 
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Academic">
+<!--  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Academic">-->
 
 
   <link rel="manifest" href="/index.webmanifest">
@@ -274,13 +274,13 @@
 
 
 
-  <meta property="twitter:card" content="summary">
+  <meta property="linkedin:card" content="summary">
 
   <meta property="og:site_name" content="Academic">
   <meta property="og:url" content="/">
   <meta property="og:title" content="Academic">
   <meta property="og:description" content="Professor of Artificial Intelligence"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
-  <meta property="twitter:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png"><meta property="og:locale" content="en-us">
+  <meta property="linkedin:image" content="/images/Linkedin.png"><meta property="og:locale" content="en-us">
 
 
 
@@ -313,7 +313,7 @@
 
 
 
-  <title>Academic</title>
+<!--  <title>Academic</title>-->
 
 </head>
 
@@ -393,9 +393,9 @@
 
 
 
-    <div class="navbar-brand-mobile-wrapper d-inline-flex d-lg-none">
-      <a class="navbar-brand" href="/">Academic</a>
-    </div>
+<!--    <div class="navbar-brand-mobile-wrapper d-inline-flex d-lg-none">-->
+<!--      <a class="navbar-brand" href="/">Academic</a>-->
+<!--    </div>-->
 
 
 
@@ -473,35 +473,6 @@
 
 
 
-        <li class="nav-item">
-          <a class="nav-link " href="/#posts" data-target="#posts"><span>Posts</span></a>
-        </li>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -548,7 +519,7 @@
 
 
         <li class="nav-item">
-          <a class="nav-link " href="/#featured" data-target="#featured"><span>Publications</span></a>
+          <a class="nav-link " href="/#featured" data-target="#featured"><span>Research</span></a>
         </li>
 
 
@@ -566,6 +537,9 @@
 
 
 
+        <li class="nav-item">
+          <a class="nav-link " href="/#posts" data-target="#posts"><span>Resume</span></a>
+        </li>
 
 
 
@@ -809,17 +783,17 @@
 
 
 
-      <img class="avatar avatar-circle" src="/author/nelson-bighetti/avatar_hu52a603635ecebd45650b162dadabb4e5_12861_270x270_fill_q90_lanczos_center.jpg" alt="Nelson Bighetti">
+      <img class="avatar avatar-circle" src="/author/nelson-bighetti/sojol_image.jpg" alt="Md. Aminul Islam">
 
 
       <div class="portrait-title">
-        <h2>Nelson Bighetti</h2>
-        <h3>Professor of Artificial Intelligence</h3>
+        <h2>Md. Aminul Islam</h2>
+        <h3>Software Engineer</h3>
 
 
         <h3>
 
-          <span>Stanford University</span>
+          <span>Ridmik Labs Limited, Dhaka, Bangladesh</span>
 
         </h3>
 
@@ -856,8 +830,8 @@
 
 
         <li>
-          <a href="https://twitter.com/GeorgeCushen" target="_blank" rel="noopener">
-            <i class="fab fa-twitter big-icon"></i>
+          <a href="https://www.linkedin.com/in/aminul-islam-sojal-9860a1147" target="_blank" rel="noopener">
+            <i class="fab fa-linkedin big-icon"></i>
           </a>
         </li>
 
@@ -888,7 +862,7 @@
 
 
         <li>
-          <a href="https://github.com/gcushen" target="_blank" rel="noopener">
+          <a href="https://github.com/aminul7506" target="_blank" rel="noopener">
             <i class="fab fa-github big-icon"></i>
           </a>
         </li>
@@ -913,11 +887,11 @@
         <h3>Interests</h3>
         <ul class="ul-interests">
 
-          <li>Artificial Intelligence</li>
+          <li>Computer Vision</li>
 
-          <li>Computational Linguistics</li>
+          <li>Software Engineering</li>
 
-          <li>Information Retrieval</li>
+          <li>Natural Language Processing</li>
 
         </ul>
       </div>
@@ -931,24 +905,24 @@
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">PhD in Artificial Intelligence, 2012</p>
-              <p class="institution">Stanford University</p>
+              <p class="course">B.Sc in Computer Science and Engineering, 2018</p>
+              <p class="institution">Bangladesh University of Engineering and Technology, Dhaka, Bangladesh</p>
             </div>
           </li>
 
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">MEng in Artificial Intelligence, 2009</p>
-              <p class="institution">Massachusetts Institute of Technology</p>
+              <p class="course">Higher Secondary Certificate, 2013</p>
+              <p class="institution">Notre Dame College, Dhaka, Bangladesh</p>
             </div>
           </li>
 
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
-              <p class="course">BSc in Artificial Intelligence, 2008</p>
-              <p class="institution">Massachusetts Institute of Technology</p>
+              <p class="course">Secondary School Certificate, 2011</p>
+              <p class="institution">B.L Govt. High School, Sirajganj, Bangladesh</p>
             </div>
           </li>
 
@@ -1001,17 +975,17 @@
 
 
 
-  <section id="skills" class="home-section wg-featurette   "  >
-    <div class="container">
+<!--  <section id="skills" class="home-section wg-featurette   "  >-->
+<!--    <div class="container">-->
 
 
 
-<div class="row featurette">
+<!--<div class="row featurette">-->
 
-  <div class="col-md-12 section-heading">
-    <h1>Skills</h1>
+<!--  <div class="col-md-12 section-heading">-->
+<!--    <h1>Skills</h1>-->
 
-  </div>
+<!--  </div>-->
 
 
 
@@ -1022,44 +996,44 @@
 
 
 
-  <div class="col-12 col-sm-4">
+<!--  <div class="col-12 col-sm-4">-->
 
-    <div class="featurette-icon"><i class="fab fa-r-project"></i></div>
+<!--    <div class="featurette-icon"><i class="fab fa-r-project"></i></div>-->
 
-    <h3>R</h3>
-    <p>90%</p>
-  </div>
+<!--    <h3>R</h3>-->
+<!--    <p>90%</p>-->
+<!--  </div>-->
 
 
 
 
 
 
-  <div class="col-12 col-sm-4">
+<!--  <div class="col-12 col-sm-4">-->
 
-    <div class="featurette-icon"><i class="fas fa-chart-line"></i></div>
+<!--    <div class="featurette-icon"><i class="fas fa-chart-line"></i></div>-->
 
-    <h3>Statistics</h3>
-    <p>100%</p>
-  </div>
+<!--    <h3>Statistics</h3>-->
+<!--    <p>100%</p>-->
+<!--  </div>-->
 
 
 
 
 
 
-  <div class="col-12 col-sm-4">
+<!--  <div class="col-12 col-sm-4">-->
 
-    <div class="featurette-icon"><i class="fas fa-camera-retro"></i></div>
+<!--    <div class="featurette-icon"><i class="fas fa-camera-retro"></i></div>-->
 
-    <h3>Photography</h3>
-    <p>10%</p>
-  </div>
+<!--    <h3>Photography</h3>-->
+<!--    <p>10%</p>-->
+<!--  </div>-->
 
-</div>
+<!--</div>-->
 
-    </div>
-  </section>
+<!--    </div>-->
+<!--  </section>-->
 
 
 
@@ -1099,109 +1073,109 @@
 
 
 
-  <section id="experience" class="home-section wg-experience   "  >
-    <div class="container">
+<!--  <section id="experience" class="home-section wg-experience   "  >-->
+<!--    <div class="container">-->
 
 
 
 
-<div class="row">
-  <div class="col-12 col-lg-4 section-heading">
-    <h1>Experience</h1>
+<!--<div class="row">-->
+<!--  <div class="col-12 col-lg-4 section-heading">-->
+<!--    <h1>Experience</h1>-->
 
-  </div>
-  <div class="col-12 col-lg-8">
+<!--  </div>-->
+<!--  <div class="col-12 col-lg-8">-->
 
 
 
 
 
-    <div class="row experience">
+<!--    <div class="row experience">-->
 
-      <div class="col-auto text-center flex-column d-none d-sm-flex">
-        <div class="row h-50">
-          <div class="col ">&nbsp;</div>
-          <div class="col">&nbsp;</div>
-        </div>
-        <div class="m-2">
-          <span class="badge badge-pill border exp-fill">&nbsp;</span>
-        </div>
-        <div class="row h-50">
-          <div class="col border-right">&nbsp;</div>
-          <div class="col">&nbsp;</div>
-        </div>
-      </div>
+<!--      <div class="col-auto text-center flex-column d-none d-sm-flex">-->
+<!--        <div class="row h-50">-->
+<!--          <div class="col ">&nbsp;</div>-->
+<!--          <div class="col">&nbsp;</div>-->
+<!--        </div>-->
+<!--        <div class="m-2">-->
+<!--          <span class="badge badge-pill border exp-fill">&nbsp;</span>-->
+<!--        </div>-->
+<!--        <div class="row h-50">-->
+<!--          <div class="col border-right">&nbsp;</div>-->
+<!--          <div class="col">&nbsp;</div>-->
+<!--        </div>-->
+<!--      </div>-->
 
-      <div class="col py-2">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title exp-title text-muted mt-0 mb-1">CEO</h4>
-            <h4 class="card-title exp-company text-muted my-0">GenCoin</h4>
-            <div class="text-muted exp-meta">
-              Jan 2017 –
+<!--      <div class="col py-2">-->
+<!--        <div class="card">-->
+<!--          <div class="card-body">-->
+<!--            <h4 class="card-title exp-title text-muted mt-0 mb-1">CEO</h4>-->
+<!--            <h4 class="card-title exp-company text-muted my-0">GenCoin</h4>-->
+<!--            <div class="text-muted exp-meta">-->
+<!--              Jan 2017 –-->
 
-                Present
+<!--                Present-->
 
 
-                <span class="middot-divider"></span>
-                <span>California</span>
+<!--                <span class="middot-divider"></span>-->
+<!--                <span>California</span>-->
 
-            </div>
-            <div class="card-text"><p>Responsibilities include:</p>
-<ul>
-<li>Analysing</li>
-<li>Modelling</li>
-<li>Deploying</li>
-</ul>
-</div>
-          </div>
-        </div>
-      </div>
-    </div>
+<!--            </div>-->
+<!--            <div class="card-text"><p>Responsibilities include:</p>-->
+<!--<ul>-->
+<!--<li>Analysing</li>-->
+<!--<li>Modelling</li>-->
+<!--<li>Deploying</li>-->
+<!--</ul>-->
+<!--</div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
 
-    <div class="row experience">
+<!--    <div class="row experience">-->
 
-      <div class="col-auto text-center flex-column d-none d-sm-flex">
-        <div class="row h-50">
-          <div class="col border-right">&nbsp;</div>
-          <div class="col">&nbsp;</div>
-        </div>
-        <div class="m-2">
-          <span class="badge badge-pill border ">&nbsp;</span>
-        </div>
-        <div class="row h-50">
-          <div class="col ">&nbsp;</div>
-          <div class="col">&nbsp;</div>
-        </div>
-      </div>
+<!--      <div class="col-auto text-center flex-column d-none d-sm-flex">-->
+<!--        <div class="row h-50">-->
+<!--          <div class="col border-right">&nbsp;</div>-->
+<!--          <div class="col">&nbsp;</div>-->
+<!--        </div>-->
+<!--        <div class="m-2">-->
+<!--          <span class="badge badge-pill border ">&nbsp;</span>-->
+<!--        </div>-->
+<!--        <div class="row h-50">-->
+<!--          <div class="col ">&nbsp;</div>-->
+<!--          <div class="col">&nbsp;</div>-->
+<!--        </div>-->
+<!--      </div>-->
 
-      <div class="col py-2">
-        <div class="card">
-          <div class="card-body">
-            <h4 class="card-title exp-title text-muted mt-0 mb-1">Professor</h4>
-            <h4 class="card-title exp-company text-muted my-0">University X</h4>
-            <div class="text-muted exp-meta">
-              Jan 2016 –
+<!--      <div class="col py-2">-->
+<!--        <div class="card">-->
+<!--          <div class="card-body">-->
+<!--            <h4 class="card-title exp-title text-muted mt-0 mb-1">Professor</h4>-->
+<!--            <h4 class="card-title exp-company text-muted my-0">University X</h4>-->
+<!--            <div class="text-muted exp-meta">-->
+<!--              Jan 2016 –-->
 
-                Dec 2016
+<!--                Dec 2016-->
 
 
-                <span class="middot-divider"></span>
-                <span>California</span>
+<!--                <span class="middot-divider"></span>-->
+<!--                <span>California</span>-->
 
-            </div>
-            <div class="card-text">Taught electronic engineering and researched semiconductor physics.</div>
-          </div>
-        </div>
-      </div>
-    </div>
+<!--            </div>-->
+<!--            <div class="card-text">Taught electronic engineering and researched semiconductor physics.</div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
 
 
-  </div>
-</div>
+<!--  </div>-->
+<!--</div>-->
 
-    </div>
-  </section>
+<!--    </div>-->
+<!--  </section>-->
 
 
 
@@ -1241,83 +1215,83 @@
 
 
 
-  <section id="accomplishments" class="home-section wg-accomplishments   "  >
-    <div class="container">
+<!--  <section id="accomplishments" class="home-section wg-accomplishments   "  >-->
+<!--    <div class="container">-->
 
 
 
 
-<div class="row">
-  <div class="col-12 col-lg-4 section-heading">
-    <h1>Accomplish­ments</h1>
+<!--<div class="row">-->
+<!--  <div class="col-12 col-lg-4 section-heading">-->
+<!--    <h1>Accomplish­ments</h1>-->
 
-  </div>
-  <div class="col-12 col-lg-8">
+<!--  </div>-->
+<!--  <div class="col-12 col-lg-8">-->
 
 
 
 
-      <div class="card experience course">
-        <div class="card-body"><h4 class="card-title exp-title text-muted my-0">Neural Networks and Deep Learning</h4><div class="card-subtitle my-0 article-metadata"><a href="https://www.coursera.org" target="_blank" rel="noopener">Coursera</a><span class="middot-divider"></span>
+<!--      <div class="card experience course">-->
+<!--        <div class="card-body"><h4 class="card-title exp-title text-muted my-0">Neural Networks and Deep Learning</h4><div class="card-subtitle my-0 article-metadata"><a href="https://www.coursera.org" target="_blank" rel="noopener">Coursera</a><span class="middot-divider"></span>-->
 
-            Oct 2018
+<!--            Oct 2018-->
 
-          </div>
+<!--          </div>-->
 
 
 
 
-            <a class="card-link" href="https://www.coursera.org" target="_blank" rel="noopener">
-              See certificate
-            </a>
+<!--            <a class="card-link" href="https://www.coursera.org" target="_blank" rel="noopener">-->
+<!--              See certificate-->
+<!--            </a>-->
 
-        </div>
-      </div>
+<!--        </div>-->
+<!--      </div>-->
 
-      <div class="card experience course">
-        <div class="card-body"><a href="https://www.edx.org/professional-certificate/uc-berkeleyx-blockchain-fundamentals" target="_blank" rel="noopener"><h4 class="card-title exp-title text-muted my-0">Blockchain Fundamentals</h4></a><div class="card-subtitle my-0 article-metadata"><a href="https://www.edx.org" target="_blank" rel="noopener">edX</a><span class="middot-divider"></span>
+<!--      <div class="card experience course">-->
+<!--        <div class="card-body"><a href="https://www.edx.org/professional-certificate/uc-berkeleyx-blockchain-fundamentals" target="_blank" rel="noopener"><h4 class="card-title exp-title text-muted my-0">Blockchain Fundamentals</h4></a><div class="card-subtitle my-0 article-metadata"><a href="https://www.edx.org" target="_blank" rel="noopener">edX</a><span class="middot-divider"></span>-->
 
-            Mar 2018
+<!--            Mar 2018-->
 
-          </div>
+<!--          </div>-->
 
 
-            <div class="card-text">Formulated informed blockchain models, hypotheses, and use cases.</div>
+<!--            <div class="card-text">Formulated informed blockchain models, hypotheses, and use cases.</div>-->
 
 
 
-            <a class="card-link" href="https://www.edx.org" target="_blank" rel="noopener">
-              See certificate
-            </a>
+<!--            <a class="card-link" href="https://www.edx.org" target="_blank" rel="noopener">-->
+<!--              See certificate-->
+<!--            </a>-->
 
-        </div>
-      </div>
+<!--        </div>-->
+<!--      </div>-->
 
-      <div class="card experience course">
-        <div class="card-body"><h4 class="card-title exp-title text-muted my-0">Object-Oriented Programming in R: S3 and R6 Course</h4><div class="card-subtitle my-0 article-metadata"><a href="https://www.datacamp.com" target="_blank" rel="noopener">DataCamp</a><span class="middot-divider"></span>
+<!--      <div class="card experience course">-->
+<!--        <div class="card-body"><h4 class="card-title exp-title text-muted my-0">Object-Oriented Programming in R: S3 and R6 Course</h4><div class="card-subtitle my-0 article-metadata"><a href="https://www.datacamp.com" target="_blank" rel="noopener">DataCamp</a><span class="middot-divider"></span>-->
 
-            Jul 2017
+<!--            Jul 2017-->
 
-            – Dec 2017
+<!--            – Dec 2017-->
 
-          </div>
+<!--          </div>-->
 
 
 
 
-            <a class="card-link" href="https://www.datacamp.com" target="_blank" rel="noopener">
-              See certificate
-            </a>
+<!--            <a class="card-link" href="https://www.datacamp.com" target="_blank" rel="noopener">-->
+<!--              See certificate-->
+<!--            </a>-->
 
-        </div>
-      </div>
+<!--        </div>-->
+<!--      </div>-->
 
 
-  </div>
-</div>
+<!--  </div>-->
+<!--</div>-->
 
-    </div>
-  </section>
+<!--    </div>-->
+<!--  </section>-->
 
 
 
@@ -2038,8 +2012,8 @@
 
 
       <li>
-        <i class="fa-li fab fa-twitter fa-2x" aria-hidden="true"></i>
-        <a href="https://twitter.com/Twitter" target="_blank" rel="noopener">DM Me</a>
+        <i class="fa-li fab fa-linkedin fa-2x" aria-hidden="true"></i>
+        <a href="https://www.linkedin.com/in/aminul-islam-sojal-9860a1147" target="_blank" rel="noopener">DM Me</a>
       </li>
 
 
