--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 
   <meta property="linkedin:card" content="summary">
 
-  <meta property="og:site_name" content="Academic">
+<!--  <meta property="og:site_name" content="Academic">-->
   <meta property="og:url" content="/">
   <meta property="og:title" content="Academic">
   <meta property="og:description" content="Professor of Artificial Intelligence"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
@@ -380,9 +380,9 @@
   <div class="container">
 
 
-    <div class="d-none d-lg-inline-flex">
-      <a class="navbar-brand" href="/">Academic</a>
-    </div>
+<!--    <div class="d-none d-lg-inline-flex">-->
+<!--      <a class="navbar-brand" href="/">Academic</a>-->
+<!--    </div>-->
 
 
 
@@ -805,6 +805,23 @@
 
 
 
+        <li>
+          <a href="https://github.com/aminul7506" target="_blank" rel="noopener">
+            <i class="fab fa-github big-icon"></i>
+          </a>
+        </li>
+
+
+
+
+
+
+
+        <li>
+          <a href="https://www.linkedin.com/in/aminul-islam-sojal-9860a1147" target="_blank" rel="noopener">
+            <i class="fab fa-linkedin big-icon"></i>
+          </a>
+        </li>
 
 
 
@@ -827,45 +844,15 @@
 
 
 
-
-
-        <li>
-          <a href="https://www.linkedin.com/in/aminul-islam-sojal-9860a1147" target="_blank" rel="noopener">
-            <i class="fab fa-linkedin big-icon"></i>
-          </a>
-        </li>
-
+<!--        <li>-->
+<!--          <a href="https://scholar.google.co.uk/citations?user=sIwtMXoAAAAJ" target="_blank" rel="noopener">-->
+<!--            <i class="ai ai-google-scholar big-icon"></i>-->
+<!--          </a>-->
+<!--        </li>-->
 
 
 
 
-
-
-
-
-
-        <li>
-          <a href="https://scholar.google.co.uk/citations?user=sIwtMXoAAAAJ" target="_blank" rel="noopener">
-            <i class="ai ai-google-scholar big-icon"></i>
-          </a>
-        </li>
-
-
-
-
-
-
-
-
-
-
-
-
-        <li>
-          <a href="https://github.com/aminul7506" target="_blank" rel="noopener">
-            <i class="fab fa-github big-icon"></i>
-          </a>
-        </li>
 
       </ul>
 
@@ -876,8 +863,14 @@
 
     <h1>Biography</h1>
 
-    <p>Nelson Bighetti is a professor of artificial intelligence at the Stanford AI Lab. His research interests include distributed robotics, mobile computing and programmable matter. He leads the Robotic Neurobiology group, which develops self-reconfiguring robots, systems of self-organizing robots, and mobile sensor networks.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.</p>
+    <p>I am currently working as a software engineer at Ridmik Labs Limited, Dhaka, Bangladesh. I have completed my B.Sc in Computer Science and Engineering
+      from <a class="nav-link " href="https://www.buet.ac.bd">Bangladesh University of Engineering and Technology</a> .
+      My undergraduate thesis supervisor was
+      <a class="nav-link " href="https://cse.buet.ac.bd/faculty_list/detail/mmislam">Dr. Md. Monirul Islam </a>with whom I have worked on the topic
+      <strong>
+    <span>Scene Reconstruction from Multiple Static CCTV Cameras.</span>
+      </strong>
+    </p>
 
 
     <div class="row">
