--- a/index.html
+++ b/index.html
@@ -864,12 +864,10 @@
     <h1>Biography</h1>
 
     <p>I am currently working as a software engineer at Ridmik Labs Limited, Dhaka, Bangladesh. I have completed my B.Sc in Computer Science and Engineering
-      from <a class="nav-link " href="https://www.buet.ac.bd">Bangladesh University of Engineering and Technology</a> .
+      from <a href="https://www.buet.ac.bd">Bangladesh University of Engineering and Technology</a> .
       My undergraduate thesis supervisor was
-      <a class="nav-link " href="https://cse.buet.ac.bd/faculty_list/detail/mmislam">Dr. Md. Monirul Islam </a>with whom I have worked on the topic
-      <strong>
-    <span>Scene Reconstruction from Multiple Static CCTV Cameras.</span>
-      </strong>
+      <a href="https://cse.buet.ac.bd/faculty_list/detail/mmislam">Dr. Md. Monirul Islam </a>with whom I have worked on the topic
+      <strong> <span>Scene Reconstruction from Multiple Static CCTV Cameras.</span> </strong>
     </p>
 
 
