--- a/index.html
+++ b/index.html
@@ -1919,154 +1919,42 @@
   <div class="col-12 col-lg-8">
 
 
-
-
-
-
-
-
-
-
-    <div class="mb-3">
-      <form name="contact" method="POST" action="https://formspree.io/test@example.org"  >
-        <div class="form-group form-inline">
-          <label class="sr-only" for="inputName">Name</label>
-          <input type="text" name="name" class="form-control w-100" id="inputName" placeholder="Name" required>
-        </div>
-        <div class="form-group form-inline">
-          <label class="sr-only" for="inputEmail">Email</label>
-          <input type="email" name="email" class="form-control w-100" id="inputEmail" placeholder="Email" required>
-        </div>
-        <div class="form-group">
-          <label class="sr-only" for="inputMessage">Message</label>
-          <textarea name="message" class="form-control" id="inputMessage" rows="5" placeholder="Message" required></textarea>
-        </div>
-
-
-        <button type="submit" class="btn btn-outline-primary px-3 py-2">Send</button>
-      </form>
-    </div>
-
-
     <ul class="fa-ul">
 
 
-
-
       <li>
-        <i class="fa-li fas fa-phone fa-2x" aria-hidden="true"></i>
-        <span id="person-telephone"><a href="tel:888%20888%2088%2088">888 888 88 88</a></span>
+        <i class="fa-li fas fa-envelope fa-2x" aria-hidden="true"></i>
+        <span id="person-email">
+        <a href = "mailto:aminul7506@gamil.com" target="_blank" rel="noopener" >aminul7506@gamil.com</a></span>
       </li>
 
-
-
-
-
-        <li>
-          <i class="fa-li fas fa-map-marker fa-2x" aria-hidden="true"></i>
-          <span id="person-address">450 Serra Mall, Stanford, CA 94305</span>
-        </li>
-
-
-
       <li>
-        <i class="fa-li fas fa-compass fa-2x" aria-hidden="true"></i>
-        <span>Enter Building 1 and take the stairs to Office 200 on Floor 2</span>
+        <i class="fa-li fab fa-skype fa-2x" aria-hidden="true"></i>
+        <a href="https://join.skype.com/invite/XctC6sTJphFd">Skype Me</a>
       </li>
-
-
-
-      <li>
-        <i class="fa-li fas fa-clock fa-2x" aria-hidden="true"></i>
-        <span>Monday 10:00 to 13:00<br>Wednesday 09:00 to 10:00</span>
-      </li>
-
-
-
-      <li>
-        <i class="fa-li fas fa-calendar-check fa-2x" aria-hidden="true"></i>
-        <a href="https://calendly.com" target="_blank" rel="noopener">Book an appointment</a>
-      </li>
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
       <li>
         <i class="fa-li fab fa-linkedin fa-2x" aria-hidden="true"></i>
-        <a href="https://www.linkedin.com/in/aminul-islam-sojal-9860a1147" target="_blank" rel="noopener">DM Me</a>
+        <a href="https://www.linkedin.com/in/aminul-islam-sojal-9860a1147" target="_blank" rel="noopener">Message Me</a>
       </li>
-
-
-
-
-
-
-
-
 
 
       <li>
-        <i class="fa-li fab fa-skype fa-2x" aria-hidden="true"></i>
-        <a href="skype:echo123?call" >Skype Me</a>
+        <i class="fa-li fas fa-phone fa-2x" aria-hidden="true"></i>
+        <span id="person-telephone">+8801750903875</span>
       </li>
 
 
-
-
-
-
-
-
-
-
-
-
-      <li>
-        <i class="fa-li fab fa-keybase fa-2x" aria-hidden="true"></i>
-        <a href="https://keybase.io/" target="_blank" rel="noopener">Chat on Keybase</a>
-      </li>
-
-
-
-
-
-
-
-
-
-
-
-
-      <li>
-        <i class="fa-li fas fa-comments fa-2x" aria-hidden="true"></i>
-        <a href="https://discourse.gohugo.io" target="_blank" rel="noopener">Discuss on Forum</a>
-      </li>
+        <li>
+          <i class="fa-li fas fa-map-marker fa-2x" aria-hidden="true"></i>
+          <span id="person-address">
+          <a href="https://www.google.com/maps/place/Gulshan+1,+Dhaka+1212/@23.7806613,90.407685,15z/data=!3m1!4b1!4m5!3m4!1s0x3755c79ebfc24eab:0xea7dab563f12457a!8m2!3d23.7820624!4d90.4160527"
+             target="_blank" rel="noopener">Gulshan-1, Dhaka-1212, Bangladesh</a></span>
+        </li>
 
 
     </ul>
-
-
-    <div class="d-none">
-      <input id="map-provider" value="2">
-      <input id="map-lat" value="37.4275">
-      <input id="map-lng" value="-122.1697">
-      <input id="map-dir" value="450 Serra Mall, Stanford, CA 94305">
-      <input id="map-zoom" value="15">
-      <input id="map-api-key" value="">
-    </div>
-    <div id="map"></div>
-
 
   </div>
 </div>
