--- a/index.html
+++ b/index.html
@@ -441,44 +441,9 @@
         </li>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <li class="nav-item">
+          <a class="nav-link " href="/#research" data-target="#research"><span>Research</span></a>
+        </li>
 
 
         <li class="nav-item">
@@ -486,86 +451,14 @@
         </li>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <li class="nav-item">
-          <a class="nav-link " href="/#featured" data-target="#featured"><span>Research</span></a>
+          <a class="nav-link " href="/#resume" data-target="#resume"><span>Resume</span></a>
         </li>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <li class="nav-item">
-          <a class="nav-link " href="/#posts" data-target="#posts"><span>Resume</span></a>
-        </li>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
         <li class="nav-item">
           <a class="nav-link " href="/#contact" data-target="#contact"><span>Contact</span></a>
         </li>
-
-
-
-
-
 
 
       </ul>
@@ -574,10 +467,9 @@
     <ul class="nav-icons navbar-nav flex-row ml-auto d-flex pl-md-2">
 
 
-      <li class="nav-item">
-        <a class="nav-link js-search" href="#" aria-label="Search"><i class="fas fa-search" aria-hidden="true"></i></a>
-      </li>
-
+<!--      <li class="nav-item">-->
+<!--        <a class="nav-link js-search" href="#" aria-label="Search"><i class="fas fa-search" aria-hidden="true"></i></a>-->
+<!--      </li>-->
 
 
 
@@ -597,8 +489,6 @@
           </a>
         </div>
       </li>
-
-
 
 
     </ul>
@@ -1322,32 +1212,48 @@
 
 
 
-  <section id="posts" class="home-section wg-pages   "  >
-    <div class="container">
+<!--  <section id="posts" class="home-section wg-pages   "  >-->
+<!--    <div class="container">-->
 
 
+<!--<div class="row ">-->
 
 
+<!--      <div class="col-12 col-lg-4 section-heading">-->
+<!--        <h1>Recent Posts</h1>-->
 
+<!--      </div>-->
 
 
+<!--  <div class="col-12 col-lg-8">-->
 
+<!--  </div>-->
+<!--</div>-->
 
+<!--    </div>-->
+<!--  </section>-->
 
 
 
 
 
 
+<!--  <section id="talks" class="home-section wg-pages   "  >-->
+<!--    <div class="container">-->
 
 
 
 
+<!--<div class="row ">-->
 
 
+<!--      <div class="col-12 col-lg-4 section-heading">-->
+<!--        <h1>Recent &amp; Upcoming Talks</h1>-->
 
+<!--      </div>-->
 
 
+<!--  <div class="col-12 col-lg-8">-->
 
 
 
@@ -1357,7 +1263,11 @@
 
 
 
+<!--  </div>-->
+<!--</div>-->
 
+<!--    </div>-->
+<!--  </section>-->
 
 
 
@@ -1369,16 +1279,11 @@
 
 
 
-<div class="row ">
 
 
-      <div class="col-12 col-lg-4 section-heading">
-        <h1>Recent Posts</h1>
 
-      </div>
 
 
-  <div class="col-12 col-lg-8">
 
 
 
@@ -1388,11 +1293,7 @@
 
 
 
-  </div>
-</div>
 
-    </div>
-  </section>
 
 
 
@@ -1406,219 +1307,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <section id="projects" class="home-section wg-portfolio   "  >
-    <div class="container">
-
-
-
-
-
-
-
-
-
-
-
-<div class="row">
-  <div class="col-12 col-lg-4 section-heading">
-
-    <h1>Projects</h1>
-
-
-  </div>
-  <div class="col-12 col-lg-8">
-
-
-
-
-
-
-
-    <div class="isotope projects-container js-layout-masonry ">
-
-    </div>
-
-  </div>
-</div>
-
-    </div>
-  </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <section id="talks" class="home-section wg-pages   "  >
-    <div class="container">
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="row ">
-
-
-      <div class="col-12 col-lg-4 section-heading">
-        <h1>Recent &amp; Upcoming Talks</h1>
-
-      </div>
-
-
-  <div class="col-12 col-lg-8">
-
-
-
-
-
-
-
-
-
-  </div>
-</div>
-
-    </div>
-  </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <section id="featured" class="home-section wg-featured   "  >
+  <section id="research" class="home-section wg-featured   "  >
     <div class="container">
 
 
@@ -1654,7 +1343,7 @@
 
 <div class="row">
   <div class="col-12 col-lg-4 section-heading">
-    <h1>Featured Publications</h1>
+    <h1>Research</h1>
 
   </div>
   <div class="col-12 col-lg-8">
@@ -1673,6 +1362,8 @@
 
 
 
+    <section id="projects" class="home-section wg-portfolio   "  >
+      <div class="container">
 
 
 
@@ -1684,9 +1375,14 @@
 
 
 
+        <div class="row">
+          <div class="col-12 col-lg-4 section-heading">
 
+            <h1>Projects</h1>
 
 
+          </div>
+          <div class="col-12 col-lg-8">
 
 
 
@@ -1694,102 +1390,43 @@
 
 
 
+            <div class="isotope projects-container js-layout-masonry ">
 
+            </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <section id="publications" class="home-section wg-pages   "  >
-    <div class="container">
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="row ">
-
-
-      <div class="col-12 col-lg-4 section-heading">
-        <h1>Recent Publications</h1>
+          </div>
+        </div>
 
       </div>
+    </section>
 
 
-  <div class="col-12 col-lg-8">
-
-    <div class="alert alert-note">
-  <div>
-    Quickly discover relevant content by <a href="./publication/">filtering publications</a>.
-  </div>
-</div>
+      <section id="resume" class="home-section wg-pages   "  >
+        <div class="container">
 
 
+    <div class="row ">
 
 
+          <div class="col-12 col-lg-4 section-heading">
+            <h1>Resume</h1>
+
+          </div>
 
 
+      <div class="col-12 col-lg-8">
 
-
-  </div>
-</div>
-
+      </div>
     </div>
-  </section>
 
+        </div>
+      </section>
 
 
 
 
+<!--  <section id="publications" class="home-section wg-pages   "  >-->
+<!--    <div class="container">-->
 
 
 
@@ -1824,8 +1461,6 @@
 
 
 
-  <section id="tags" class="home-section wg-tag-cloud   "  >
-    <div class="container">
 
 
 
@@ -1837,34 +1472,42 @@
 
 
 
+<!--<div class="row ">-->
 
 
+<!--      <div class="col-12 col-lg-4 section-heading">-->
+<!--        <h1>Recent Publications</h1>-->
 
+<!--      </div>-->
 
 
+<!--  <div class="col-12 col-lg-8">-->
 
+<!--    <div class="alert alert-note">-->
+<!--  <div>-->
+<!--    Quickly discover relevant content by <a href="./publication/">filtering publications</a>.-->
+<!--  </div>-->
+<!--</div>-->
 
-<div class="row">
-  <div class="col-12 col-lg-4 section-heading">
-    <h1>Popular Topics</h1>
 
-  </div>
-  <div class="col-12 col-lg-8">
 
 
 
 
-  </div>
-</div>
 
-    </div>
-  </section>
 
+<!--  </div>-->
+<!--</div>-->
 
+<!--    </div>-->
+<!--  </section>-->
 
 
 
+<!--    -->
 
+<!--  <section id="tags" class="home-section wg-tag-cloud   "  >-->
+<!--    <div class="container">-->
 
 
 
@@ -1877,7 +1520,21 @@
 
 
 
+<!--<div class="row">-->
+<!--  <div class="col-12 col-lg-4 section-heading">-->
+<!--    <h1>Popular Topics</h1>-->
 
+<!--  </div>-->
+<!--  <div class="col-12 col-lg-8">-->
+
+
+
+
+<!--  </div>-->
+<!--</div>-->
+
+<!--    </div>-->
+<!--  </section>-->
 
 
 
