--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
       </ul>
     </div>
 
-    <ul class="nav-icons navbar-nav flex-row ml-auto d-flex pl-md-2">
+<!--    <ul class="nav-icons navbar-nav flex-row ml-auto d-flex pl-md-2">-->
 
 
 <!--      <li class="nav-item">-->
@@ -473,25 +473,25 @@
 
 
 
-      <li class="nav-item dropdown theme-dropdown">
-        <a href="#" class="nav-link" data-toggle="dropdown" aria-haspopup="true">
-          <i class="fas fa-moon" aria-hidden="true"></i>
-        </a>
-        <div class="dropdown-menu">
-          <a href="#" class="dropdown-item js-set-theme-light">
-            <span>Light</span>
-          </a>
-          <a href="#" class="dropdown-item js-set-theme-dark">
-            <span>Dark</span>
-          </a>
-          <a href="#" class="dropdown-item js-set-theme-auto">
-            <span>Automatic</span>
-          </a>
-        </div>
-      </li>
+<!--      <li class="nav-item dropdown theme-dropdown">-->
+<!--        <a href="#" class="nav-link" data-toggle="dropdown" aria-haspopup="true">-->
+<!--          <i class="fas fa-moon" aria-hidden="true"></i>-->
+<!--        </a>-->
+<!--        <div class="dropdown-menu">-->
+<!--          <a href="#" class="dropdown-item js-set-theme-light">-->
+<!--            <span>Light</span>-->
+<!--          </a>-->
+<!--          <a href="#" class="dropdown-item js-set-theme-dark">-->
+<!--            <span>Dark</span>-->
+<!--          </a>-->
+<!--          <a href="#" class="dropdown-item js-set-theme-auto">-->
+<!--            <span>Automatic</span>-->
+<!--          </a>-->
+<!--        </div>-->
+<!--      </li>-->
 
 
-    </ul>
+<!--    </ul>-->
 
   </div>
 </nav>
@@ -754,7 +754,7 @@
     <h1>Biography</h1>
 
     <p>I am currently working as a software engineer at Ridmik Labs Limited, Dhaka, Bangladesh. I have completed my B.Sc in Computer Science and Engineering
-      from <a href="https://www.buet.ac.bd">Bangladesh University of Engineering and Technology</a> .
+      from <a href="https://www.buet.ac.bd">Bangladesh University of Engineering and Technology</a>.
       My undergraduate thesis supervisor was
       <a href="https://cse.buet.ac.bd/faculty_list/detail/mmislam">Dr. Md. Monirul Islam </a>with whom I have worked on the topic
       <strong> <span>Scene Reconstruction from Multiple Static CCTV Cameras.</span> </strong>
@@ -1751,9 +1751,9 @@
     <footer class="site-footer">
 
 
-  <p class="powered-by">
+<!--  <p class="powered-by">-->
 
-  </p>
+<!--  </p>-->
 
 
 
