--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
       </ul>
     </div>
 
-<!--    <ul class="nav-icons navbar-nav flex-row ml-auto d-flex pl-md-2">-->
+    <ul class="nav-icons navbar-nav flex-row ml-auto d-flex pl-md-2">
 
 
 <!--      <li class="nav-item">-->
@@ -473,25 +473,25 @@
 
 
 
-<!--      <li class="nav-item dropdown theme-dropdown">-->
-<!--        <a href="#" class="nav-link" data-toggle="dropdown" aria-haspopup="true">-->
-<!--          <i class="fas fa-moon" aria-hidden="true"></i>-->
-<!--        </a>-->
-<!--        <div class="dropdown-menu">-->
-<!--          <a href="#" class="dropdown-item js-set-theme-light">-->
-<!--            <span>Light</span>-->
-<!--          </a>-->
-<!--          <a href="#" class="dropdown-item js-set-theme-dark">-->
-<!--            <span>Dark</span>-->
-<!--          </a>-->
-<!--          <a href="#" class="dropdown-item js-set-theme-auto">-->
-<!--            <span>Automatic</span>-->
-<!--          </a>-->
-<!--        </div>-->
-<!--      </li>-->
+      <li class="nav-item dropdown theme-dropdown">
+        <a href="#" class="nav-link" data-toggle="dropdown" aria-haspopup="true">
+          <i class="fas fa-moon" aria-hidden="true"></i>
+        </a>
+        <div class="dropdown-menu">
+          <a href="#" class="dropdown-item js-set-theme-light">
+            <span>Light</span>
+          </a>
+          <a href="#" class="dropdown-item js-set-theme-dark">
+            <span>Dark</span>
+          </a>
+          <a href="#" class="dropdown-item js-set-theme-auto">
+            <span>Automatic</span>
+          </a>
+        </div>
+      </li>
 
 
-<!--    </ul>-->
+    </ul>
 
   </div>
 </nav>
@@ -1379,6 +1379,14 @@
           <div class="col-12 col-lg-4 section-heading">
 
             <h1>Projects</h1>
+
+            <h3>Android Stay Safe Application</h3>
+
+            <h4>Tools : Android Studio, Firebase, Google Map Api</h4>
+
+            <p>It is an android application which is based on the idea of smart city, crime reporting, crime alert and human security.</p>
+
+            <h4>Project code and details is available <a href = "https://github.com/aminul7506/StaySafe" target="_blank" rel="noopener">Here</a></span></h4>
 
 
           </div>
