--- a/index.html
+++ b/index.html
@@ -1378,9 +1378,22 @@
         <div class="row">
           <div class="col-12 col-lg-4 section-heading">
 
-
+            <h1>Projects</h1>
 
           </div>
+
+          <div>
+
+          <h3>Android Stay Safe Application</h3>
+
+          <h4>Tools : Android Studio, Firebase, Google Map Api</h4>
+
+          <p>It is an android application which is based on the idea of smart city, crime reporting, crime alert and human security.</p>
+
+          <h4>Project code and details is available <a href = "https://github.com/aminul7506/StaySafe" target="_blank" rel="noopener">Here</a></span></h4>
+
+          </div>
+
           <div class="col-12 col-lg-8">
 
 
@@ -1390,16 +1403,6 @@
 
 
             <div class="isotope projects-container js-layout-masonry ">
-
-              <h1>Projects</h1>
-
-              <h3>Android Stay Safe Application</h3>
-
-              <h4>Tools : Android Studio, Firebase, Google Map Api</h4>
-
-              <p>It is an android application which is based on the idea of smart city, crime reporting, crime alert and human security.</p>
-
-              <h4>Project code and details is available <a href = "https://github.com/aminul7506/StaySafe" target="_blank" rel="noopener">Here</a></span></h4>
 
             </div>
 
