--- a/index.html
+++ b/index.html
@@ -1384,14 +1384,29 @@
 
           <div class="col-12">
 
-          <h3>Android Stay Safe Application</h3>
+            <h3>Android Stay Safe Application</h3>
 
-          <h4>Tools : Android Studio, Firebase, Google Map Api</h4>
+            <h4>Tools : Android Studio, Firebase, Google Map Api</h4>
 
-          <p>It is an android application which is based on the idea of smart city, crime reporting, crime alert and human security.</p>
+            <p>It is an android application which is based on the idea of smart city, crime reporting, crime alert and human security.</p>
 
-          <h4>Project code and details is available <a href = "https://github.com/aminul7506/StaySafe" target="_blank" rel="noopener">Here</a></span></h4>
+            <h4>Project code and details is available <a href = "https://github.com/aminul7506/StaySafe" target="_blank" rel="noopener">Here</a></span></h4>
+          </div>
 
+
+
+          <div class="col-12">
+            <h3>Multivariate Stock Price Prediction</h3>
+
+            <h4>Tools : Keras Api, Tensorflow backend</h4>
+
+            <p>This is a multi-variate stock price prediction project.
+              I have used keras api and tensorflow as backend.
+              It can predict the starting price of next day share market based on its previous data. I have
+              used one year data from share market and made a model to learn using LSTM(Long Short Term Memory). I have used multiple
+              attribute to predict next day share market opening price.</p>
+
+            <h4>Project code is available <a href = "https://github.com/aminul7506/Multivariate-Stock-Price-Prediction" target="_blank" rel="noopener">Here</a></span></h4>
           </div>
 
           <div class="col-12 col-lg-8">
