--- a/index.html
+++ b/index.html
@@ -1391,6 +1391,9 @@
             <p>It is an android application which is based on the idea of smart city, crime reporting, crime alert and human security.</p>
 
             <h4>Project code and details is available <a href = "https://github.com/aminul7506/StaySafe" target="_blank" rel="noopener">Here</a></span></h4>
+
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
           </div>
 
 
@@ -1407,6 +1410,51 @@
               attribute to predict next day share market opening price.</p>
 
             <h4>Project code is available <a href = "https://github.com/aminul7506/Multivariate-Stock-Price-Prediction" target="_blank" rel="noopener">Here</a></span></h4>
+
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+          </div>
+
+
+
+
+
+
+          <div class="col-12">
+            <h3>Multivariate Stock Price Prediction</h3>
+
+            <h4>Tools : Keras Api, Tensorflow backend</h4>
+
+            <p>This is a multi-variate stock price prediction project.
+              I have used keras api and tensorflow as backend.
+              It can predict the starting price of next day share market based on its previous data. I have
+              used one year data from share market and made a model to learn using LSTM(Long Short Term Memory). I have used multiple
+              attribute to predict next day share market opening price.</p>
+
+            <h4>Project code is available <a href = "https://github.com/aminul7506/Multivariate-Stock-Price-Prediction" target="_blank" rel="noopener">Here</a></span></h4>
+
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
+          </div>
+
+
+
+          <div class="col-12">
+            <h3>Online Examination Web</h3>
+
+            <h4>Tools : JSP Servlet, Oracle</h4>
+
+            <p>This is a web based online examination project using Java as frontend and oracle as backend. There are two
+              types of examination. Practice examination and final examination. In practice examination student can give exam at any time but on final
+              examination student can give exam exactly on exam time. There is an admin panel where teacher can upload questions,
+              check students' scripts and can evaluate answer scripts. Student can answer
+              both MCQ and descriptive type question and teacher can give marks to this and evaluation will be done automatically.
+              This project is of great use for schools and colleges to remove burden of manual checking of answers and results.</p>
+
+            <h4>Project code is available <a href = "https://github.com/aminul7506/Online-Examination-Web-Based-" target="_blank" rel="noopener">Here</a></span></h4>
+
+            <p>&nbsp;</p>
+            <p>&nbsp;</p>
           </div>
 
           <div class="col-12 col-lg-8">
