--- a/index.html
+++ b/index.html
@@ -1393,29 +1393,7 @@
             <h4>Project code and details is available <a href = "https://github.com/aminul7506/StaySafe" target="_blank" rel="noopener">Here</a></span></h4>
 
             <p>&nbsp;</p>
-            <p>&nbsp;</p>
           </div>
-
-
-
-          <div class="col-12">
-            <h3>Multivariate Stock Price Prediction</h3>
-
-            <h4>Tools : Keras Api, Tensorflow backend</h4>
-
-            <p>This is a multi-variate stock price prediction project.
-              I have used keras api and tensorflow as backend.
-              It can predict the starting price of next day share market based on its previous data. I have
-              used one year data from share market and made a model to learn using LSTM(Long Short Term Memory). I have used multiple
-              attribute to predict next day share market opening price.</p>
-
-            <h4>Project code is available <a href = "https://github.com/aminul7506/Multivariate-Stock-Price-Prediction" target="_blank" rel="noopener">Here</a></span></h4>
-
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
-          </div>
-
-
 
 
 
@@ -1433,7 +1411,6 @@
 
             <h4>Project code is available <a href = "https://github.com/aminul7506/Multivariate-Stock-Price-Prediction" target="_blank" rel="noopener">Here</a></span></h4>
 
-            <p>&nbsp;</p>
             <p>&nbsp;</p>
           </div>
 
@@ -1454,8 +1431,70 @@
             <h4>Project code is available <a href = "https://github.com/aminul7506/Online-Examination-Web-Based-" target="_blank" rel="noopener">Here</a></span></h4>
 
             <p>&nbsp;</p>
+          </div>
+
+          <div class="col-12">
+            <h3>Online Examination Desktop</h3>
+
+            <h4>Tools : JavaFx, Socket Programming</h4>
+
+            <p>This is an online examination project using java socket programming and JavaFx framework. Teachers can upload question paper from admin panel
+              for his subject. Students can give MCQ exam on question uploaded by teachers and can see their marks and all previous history on every subject.
+              </p>
+
+            <h4>Project code is available <a href = "https://github.com/aminul7506/Online-Examination-Desktop-" target="_blank" rel="noopener">Here</a></span></h4>
+
             <p>&nbsp;</p>
           </div>
+
+
+
+          <div class="col-12">
+            <h3>Designing a system on ‘Automation of Govt. Hospital Management’</h3>
+
+            <p>Rewrite</p>
+
+            <p>&nbsp;</p>
+          </div>
+
+          <div class="col-12">
+            <h3>Car Racing Game</h3>
+
+            <h4>Tools : Unity 3D, C#</h4>
+
+            <p>This is a car racing game using unity 3D game engine. This project has the android, iOS and desktop version.</p>
+
+            <h4>Project code is available <a href = "https://github.com/aminul7506/Car-Racing-Game" target="_blank" rel="noopener">Here</a></span></h4>
+
+            <p>&nbsp;</p>
+          </div>
+
+          <div class="col-12">
+            <h3>Rapid Roll Android</h3>
+
+            <h4>Tools : Android Studio, Accelerometer</h4>
+
+            <p>This is an android rapid roll game. User can play this game using android device accelerometer, see high scores and change theme of
+              gaming screen.
+            </p>
+
+            <h4>Project code is available <a href = "https://github.com/aminul7506/Rapid-Roll" target="_blank" rel="noopener">Here</a></span></h4>
+
+            <p>&nbsp;</p>
+          </div>
+
+          <div class="col-12">
+            <h3>Rapid Roll Desktop</h3>
+
+            <h4>Tools : iGraphics</h4>
+
+            <p>This is a rapid roll game using iGraphics. User can play and see high scores.</p>
+
+            <h4>Project code is available <a href = "https://github.com/aminul7506/Rapid-Roll-Desktop-" target="_blank" rel="noopener">Here</a></span></h4>
+
+            <p>&nbsp;</p>
+          </div>
+
 
           <div class="col-12 col-lg-8">
 
