--- a/index.html
+++ b/index.html
@@ -1469,6 +1469,9 @@
             <p>&nbsp;</p>
           </div>
 
+
+
+
           <div class="col-12">
             <h3>Rapid Roll Android</h3>
 
@@ -1483,6 +1486,9 @@
             <p>&nbsp;</p>
           </div>
 
+
+
+
           <div class="col-12">
             <h3>Rapid Roll Desktop</h3>
 
@@ -1494,6 +1500,98 @@
 
             <p>&nbsp;</p>
           </div>
+
+
+
+
+          <div class="col-12">
+            <h3>Air Fighter Desktop</h3>
+
+            <h4>Tools : iGraphics</h4>
+
+            <p>It is a funny air fighter game. There are multiple levels in this game and leader boards from where
+              user can see high scores of his own and others.</p>
+
+            <h4>Project code is available <a href = "https://github.com/aminul7506/Air-Fighter" target="_blank" rel="noopener">Here</a></span></h4>
+
+            <p>&nbsp;</p>
+          </div>
+
+
+
+
+          <div class="col-12">
+            <h3>Android Notebook</h3>
+
+            <h4>Tools : Android Studio</h4>
+
+            <p>This is an android notebook application. User can save,edit, delete one's writings in the notebook.</p>
+
+            <h4>Project code is available <a href = "https://github.com/aminul7506/Notebook" target="_blank" rel="noopener">Here</a></span></h4>
+
+            <p>&nbsp;</p>
+          </div>
+
+          <div class="col-12">
+            <h3>Android Notebook</h3>
+
+            <h4>Tools : Android Studio</h4>
+
+            <p>This is an android notebook application. User can save,edit, delete one's writings in the notebook.</p>
+
+            <h4>Project code is available <a href = "https://github.com/aminul7506/Notebook" target="_blank" rel="noopener">Here</a></span></h4>
+
+            <p>&nbsp;</p>
+          </div>
+
+
+
+
+          <div class="col-12">
+            <h3>Android Speedometer and Location</h3>
+
+            <h4>Tools : Android Studio, Google Map Api</h4>
+
+            <p>This is an android application from which user can see one's current velocity , current location in map and location details.</p>
+
+            <h4>Project code is available <a href = "https://github.com/aminul7506/Speedometer" target="_blank" rel="noopener">Here</a></span></h4>
+
+            <p>&nbsp;</p>
+          </div>
+
+
+
+
+
+          <div class="col-12">
+            <h3>Mental Age Simulator</h3>
+
+            <h4>Tools : Android Studio</h4>
+
+            <p>This is an android application where there are some questions. You have to answer these questions and
+              based on your answers your mental age will be simulated.</p>
+
+            <h4>Project code is available <a href = "https://github.com/aminul7506/Mental-Age-V-1" target="_blank" rel="noopener">Here</a></span></h4>
+
+            <p>&nbsp;</p>
+          </div>
+
+
+
+
+          <div class="col-12">
+            <h3>Android Flashlight</h3>
+
+            <h4>Tools : Android Studio</h4>
+
+            <p>This is an android flashlight application. You can use this as a torch light from your android device.</p>
+
+            <h4>Project code is available <a href = "https://github.com/aminul7506/Flashlight" target="_blank" rel="noopener">Here</a></span></h4>
+
+            <p>&nbsp;</p>
+          </div>
+
+
 
 
           <div class="col-12 col-lg-8">
