--- a/index.html
+++ b/index.html
@@ -1483,6 +1483,9 @@
 
             <h4>Project code is available <a href = "https://github.com/aminul7506/Rapid-Roll" target="_blank" rel="noopener">Here</a></span></h4>
 
+            <h4>Get it on <a href = "https://www.amazon.com/Sojal-Rapid-Roll/dp/B01M9HQHPD/ref=sr_1_4?dchild=1&qid=16027
+            65618&refinements=p_4%3ASojal&s=mobile-apps&sr=1-4" target="_blank" rel="noopener">Amazon App Store</a></span></h4></h4>
+
             <p>&nbsp;</p>
           </div>
 
@@ -1529,17 +1532,8 @@
 
             <h4>Project code is available <a href = "https://github.com/aminul7506/Notebook" target="_blank" rel="noopener">Here</a></span></h4>
 
-            <p>&nbsp;</p>
-          </div>
-
-          <div class="col-12">
-            <h3>Android Notebook</h3>
-
-            <h4>Tools : Android Studio</h4>
-
-            <p>This is an android notebook application. User can save,edit, delete one's writings in the notebook.</p>
-
-            <h4>Project code is available <a href = "https://github.com/aminul7506/Notebook" target="_blank" rel="noopener">Here</a></span></h4>
+            <h4>Get it on <a href = "https://www.amazon.com/Sojal-Notebook/dp/B01DK5LA28/ref=sr_1_
+            1?dchild=1&qid=1602780174&refinements=p_4%3ASojal&s=mobile-apps&sr=1-1" target="_blank" rel="noopener">Amazon App Store</a></span></h4></h4>
 
             <p>&nbsp;</p>
           </div>
@@ -1555,6 +1549,9 @@
             <p>This is an android application from which user can see one's current velocity , current location in map and location details.</p>
 
             <h4>Project code is available <a href = "https://github.com/aminul7506/Speedometer" target="_blank" rel="noopener">Here</a></span></h4>
+
+            <h4>Get it on <a href = "https://www.amazon.com/Sojal-Speedometer-Location/dp/B01EIJP21K/ref=sr_1_3?dchild=1&qid=
+            1602765618&refinements=p_4%3ASojal&s=mobile-apps&sr=1-3" target="_blank" rel="noopener">Amazon App Store</a></span></h4></h4>
 
             <p>&nbsp;</p>
           </div>
@@ -1573,6 +1570,9 @@
 
             <h4>Project code is available <a href = "https://github.com/aminul7506/Mental-Age-V-1" target="_blank" rel="noopener">Here</a></span></h4>
 
+            <h4>Get it on <a href = "https://www.amazon.com/Sojal-Mental-Age/dp/B01CSTBLJO/ref=sr_1_2?dchild=1&qid=1602765618&refinements=p_
+            4%3ASojal&s=mobile-apps&sr=1-2" target="_blank" rel="noopener">Amazon App Store</a></span></h4></h4>
+
             <p>&nbsp;</p>
           </div>
 
@@ -1587,6 +1587,21 @@
             <p>This is an android flashlight application. You can use this as a torch light from your android device.</p>
 
             <h4>Project code is available <a href = "https://github.com/aminul7506/Flashlight" target="_blank" rel="noopener">Here</a></span></h4>
+
+            <h4>Get it on <a href = "https://www.amazon.com/Sojal-Flashlight/dp/B01DK9GVLE/ref=sr_1_5?dchild=1&qid=1602765618&refinements=
+            p_4%3ASojal&s=mobile-apps&sr=1-5" target="_blank" rel="noopener">Amazon App Store</a></span></h4></h4>
+
+            <p>&nbsp;</p>
+          </div>
+
+
+
+          <div class="col-12">
+            <h3>Quad Copter Controller from Android Device</h3>
+
+            <h4>Tools : Android Studio, Bluetooth module</h4>
+
+            <p>A quad copter controller using bluetooth module that can control the movement of a small quad copter</p>
 
             <p>&nbsp;</p>
           </div>
