--- a/index.html
+++ b/index.html
@@ -799,14 +799,6 @@
             </div>
           </li>
 
-          <li>
-            <i class="fa-li fas fa-graduation-cap"></i>
-            <div class="description">
-              <p class="course">Secondary School Certificate, 2011</p>
-              <p class="institution">B.L Govt. High School, Sirajganj, Bangladesh</p>
-            </div>
-          </li>
-
         </ul>
       </div>
 
@@ -1386,9 +1378,32 @@
 
             <h3>Android Stay Safe Application</h3>
 
-            <h4>Tools : Android Studio, Firebase, Google Map Api</h4>
+            <h4>Tools : Android Studio, Firebase, Google Map API, SQL, Cloud Messaging</h4>
 
-            <p>It is an android application which is based on the idea of smart city, crime reporting, crime alert and human security.</p>
+            <p>It is an android application which is based on the idea of smart city, crime reporting, crime alert and human security. There are
+            two sides in the app: one is admin side and another one is user side.
+
+            <h4>User side functionality</h4>
+            <ul>
+              <li>User can report a crime from the app to one's nearby police station.</li>
+              <li>User can see the verified crimes in an area.</li>
+              <li>User can see the nearby police station based on his current location and can call or message to the police station
+                immediately in case of an emergency or danger.</li>
+              <li>If user is now in a crime or danger area, user will get a notification.</li>
+              <li>User can see crime statistics and verified crimes in one's area.</li>
+              <li>User can see nearby friends' location in map and can call or message them.</li>
+            </ul>
+
+
+            <h4>Admin or police side functionality</h4>
+            <ul>
+              <li>Police can log into his/her station.</li>
+              <li>Police can see the reported crimes in his area and can verify it.</li>
+              <li>Police can call or send message to a user who has reported a crime.</li>
+              <li>Police can see crimes statistics in his/her area.</li>
+            </ul>
+
+            </p>
 
             <h4>Project code and details is available <a href = "https://github.com/aminul7506/StaySafe" target="_blank" rel="noopener">Here</a></span></h4>
 
@@ -1401,7 +1416,7 @@
           <div class="col-12">
             <h3>Multivariate Stock Price Prediction</h3>
 
-            <h4>Tools : Keras Api, Tensorflow backend</h4>
+            <h4>Tools : Keras API, Tensorflow backend</h4>
 
             <p>This is a multi-variate stock price prediction project.
               I have used keras api and tensorflow as backend.
@@ -1450,14 +1465,6 @@
 
 
           <div class="col-12">
-            <h3>Designing a system on ‘Automation of Govt. Hospital Management’</h3>
-
-            <p>Rewrite</p>
-
-            <p>&nbsp;</p>
-          </div>
-
-          <div class="col-12">
             <h3>Car Racing Game</h3>
 
             <h4>Tools : Unity 3D, C#</h4>
@@ -1504,6 +1511,16 @@
             <p>&nbsp;</p>
           </div>
 
+
+
+
+<!--          <div class="col-12">-->
+<!--            <h3>An information system design on ‘Automation of Govt. Hospital Management’</h3>-->
+
+<!--            <p>Rewrite</p>-->
+
+<!--            <p>&nbsp;</p>-->
+<!--          </div>-->
 
 
 
@@ -1601,7 +1618,19 @@
 
             <h4>Tools : Android Studio, Bluetooth module</h4>
 
-            <p>A quad copter controller using bluetooth module that can control the movement of a small quad copter</p>
+            <p>A quad copter controller using bluetooth module that can control the movement of a small quad copter.</p>
+
+            <p>&nbsp;</p>
+          </div>
+
+          <div class="col-12">
+            <h3>Android Calculator</h3>
+
+            <h4>Tools : Android Studio</h4>
+
+            <p>It is a simple calculator app than can perform basic operations</p>
+
+            <h4>Project code is available <a href = "https://github.com/aminul7506/Flashlight" target="_blank" rel="noopener">Here</a></span></h4>
 
             <p>&nbsp;</p>
           </div>
@@ -1809,7 +1838,7 @@
       <li>
         <i class="fa-li fas fa-envelope fa-2x" aria-hidden="true"></i>
         <span id="person-email">
-        <a href = "mailto:aminul7506@gamil.com" target="_blank" rel="noopener" >aminul7506@gamil.com</a></span>
+        <a href = "mailto:aminul7506@gamil.com" target="_blank" rel="noopener" >aminul7506 AT gamil DOT com</a></span>
       </li>
 
       <li>
