--- a/index.html
+++ b/index.html
@@ -1838,7 +1838,7 @@
       <li>
         <i class="fa-li fas fa-envelope fa-2x" aria-hidden="true"></i>
         <span id="person-email">
-        <a href = "mailto:aminul7506@gamil.com" target="_blank" rel="noopener" >aminul7506 AT gamil DOT com</a></span>
+        <a href = "mailto:aminul7506@gamil.com" target="_blank" rel="noopener" >aminul7506 AT gmail DOT com</a></span>
       </li>
 
       <li>
