--- a/index.html
+++ b/index.html
@@ -1405,7 +1405,7 @@
 
             </p>
 
-            <h4>Project code and details is available <a href = "https://github.com/aminul7506/StaySafe" target="_blank" rel="noopener">Here</a></span></h4>
+            <h4>Project code and details is available <a href = "https://github.com/aminul7506/StaySafe" target="_blank" rel="noopener">Github Code</a></span></h4>
 
             <p>&nbsp;</p>
           </div>
@@ -1424,7 +1424,7 @@
               used one year data from share market and made a model to learn using LSTM(Long Short Term Memory). I have used multiple
               attribute to predict next day share market opening price.</p>
 
-            <h4>Project code is available <a href = "https://github.com/aminul7506/Multivariate-Stock-Price-Prediction" target="_blank" rel="noopener">Here</a></span></h4>
+            <h4> <a href = "https://github.com/aminul7506/Multivariate-Stock-Price-Prediction" target="_blank" rel="noopener">Github Code</a></span></h4>
 
             <p>&nbsp;</p>
           </div>
@@ -1443,7 +1443,7 @@
               both MCQ and descriptive type question and teacher can give marks to this and evaluation will be done automatically.
               This project is of great use for schools and colleges to remove burden of manual checking of answers and results.</p>
 
-            <h4>Project code is available <a href = "https://github.com/aminul7506/Online-Examination-Web-Based-" target="_blank" rel="noopener">Here</a></span></h4>
+            <h4> <a href = "https://github.com/aminul7506/Online-Examination-Web-Based-" target="_blank" rel="noopener">Github Code</a></span></h4>
 
             <p>&nbsp;</p>
           </div>
@@ -1457,7 +1457,7 @@
               for his subject. Students can give MCQ exam on question uploaded by teachers and can see their marks and all previous history on every subject.
               </p>
 
-            <h4>Project code is available <a href = "https://github.com/aminul7506/Online-Examination-Desktop-" target="_blank" rel="noopener">Here</a></span></h4>
+            <h4> <a href = "https://github.com/aminul7506/Online-Examination-Desktop-" target="_blank" rel="noopener">Github Code</a></span></h4>
 
             <p>&nbsp;</p>
           </div>
@@ -1471,7 +1471,7 @@
 
             <p>This is a car racing game using unity 3D game engine. This project has the android, iOS and desktop version.</p>
 
-            <h4>Project code is available <a href = "https://github.com/aminul7506/Car-Racing-Game" target="_blank" rel="noopener">Here</a></span></h4>
+            <h4> <a href = "https://github.com/aminul7506/Car-Racing-Game" target="_blank" rel="noopener">Github Code</a></span></h4>
 
             <p>&nbsp;</p>
           </div>
@@ -1488,7 +1488,7 @@
               gaming screen.
             </p>
 
-            <h4>Project code is available <a href = "https://github.com/aminul7506/Rapid-Roll" target="_blank" rel="noopener">Here</a></span></h4>
+            <h4> <a href = "https://github.com/aminul7506/Rapid-Roll" target="_blank" rel="noopener">Github Code</a></span></h4>
 
             <h4>Get it on <a href = "https://www.amazon.com/Sojal-Rapid-Roll/dp/B01M9HQHPD/ref=sr_1_4?dchild=1&qid=16027
             65618&refinements=p_4%3ASojal&s=mobile-apps&sr=1-4" target="_blank" rel="noopener">Amazon App Store</a></span></h4></h4>
@@ -1506,7 +1506,7 @@
 
             <p>This is a rapid roll game using iGraphics. User can play and see high scores.</p>
 
-            <h4>Project code is available <a href = "https://github.com/aminul7506/Rapid-Roll-Desktop-" target="_blank" rel="noopener">Here</a></span></h4>
+            <h4> <a href = "https://github.com/aminul7506/Rapid-Roll-Desktop-" target="_blank" rel="noopener">Github Code</a></span></h4>
 
             <p>&nbsp;</p>
           </div>
@@ -1532,7 +1532,7 @@
             <p>It is a funny air fighter game. There are multiple levels in this game and leader boards from where
               user can see high scores of his own and others.</p>
 
-            <h4>Project code is available <a href = "https://github.com/aminul7506/Air-Fighter" target="_blank" rel="noopener">Here</a></span></h4>
+            <h4> <a href = "https://github.com/aminul7506/Air-Fighter" target="_blank" rel="noopener">Github Code</a></span></h4>
 
             <p>&nbsp;</p>
           </div>
@@ -1547,7 +1547,7 @@
 
             <p>This is an android notebook application. User can save,edit, delete one's writings in the notebook.</p>
 
-            <h4>Project code is available <a href = "https://github.com/aminul7506/Notebook" target="_blank" rel="noopener">Here</a></span></h4>
+            <h4> <a href = "https://github.com/aminul7506/Notebook" target="_blank" rel="noopener">Github Code</a></span></h4>
 
             <h4>Get it on <a href = "https://www.amazon.com/Sojal-Notebook/dp/B01DK5LA28/ref=sr_1_
             1?dchild=1&qid=1602780174&refinements=p_4%3ASojal&s=mobile-apps&sr=1-1" target="_blank" rel="noopener">Amazon App Store</a></span></h4></h4>
@@ -1565,7 +1565,7 @@
 
             <p>This is an android application from which user can see one's current velocity , current location in map and location details.</p>
 
-            <h4>Project code is available <a href = "https://github.com/aminul7506/Speedometer" target="_blank" rel="noopener">Here</a></span></h4>
+            <h4> <a href = "https://github.com/aminul7506/Speedometer" target="_blank" rel="noopener">Github Code</a></span></h4>
 
             <h4>Get it on <a href = "https://www.amazon.com/Sojal-Speedometer-Location/dp/B01EIJP21K/ref=sr_1_3?dchild=1&qid=
             1602765618&refinements=p_4%3ASojal&s=mobile-apps&sr=1-3" target="_blank" rel="noopener">Amazon App Store</a></span></h4></h4>
@@ -1585,7 +1585,7 @@
             <p>This is an android application where there are some questions. You have to answer these questions and
               based on your answers your mental age will be simulated.</p>
 
-            <h4>Project code is available <a href = "https://github.com/aminul7506/Mental-Age-V-1" target="_blank" rel="noopener">Here</a></span></h4>
+            <h4> <a href = "https://github.com/aminul7506/Mental-Age-V-1" target="_blank" rel="noopener">Github Code</a></span></h4>
 
             <h4>Get it on <a href = "https://www.amazon.com/Sojal-Mental-Age/dp/B01CSTBLJO/ref=sr_1_2?dchild=1&qid=1602765618&refinements=p_
             4%3ASojal&s=mobile-apps&sr=1-2" target="_blank" rel="noopener">Amazon App Store</a></span></h4></h4>
@@ -1603,7 +1603,7 @@
 
             <p>This is an android flashlight application. You can use this as a torch light from your android device.</p>
 
-            <h4>Project code is available <a href = "https://github.com/aminul7506/Flashlight" target="_blank" rel="noopener">Here</a></span></h4>
+            <h4> <a href = "https://github.com/aminul7506/Flashlight" target="_blank" rel="noopener">Github Code</a></span></h4>
 
             <h4>Get it on <a href = "https://www.amazon.com/Sojal-Flashlight/dp/B01DK9GVLE/ref=sr_1_5?dchild=1&qid=1602765618&refinements=
             p_4%3ASojal&s=mobile-apps&sr=1-5" target="_blank" rel="noopener">Amazon App Store</a></span></h4></h4>
