--- a/index.html
+++ b/index.html
@@ -445,6 +445,10 @@
           <a class="nav-link " href="/#research" data-target="#research"><span>Research</span></a>
         </li>
 
+        <li class="nav-item">
+          <a class="nav-link " href="/#work_experience" data-target="#work_experience"><span>Work Experience</span></a>
+        </li>
+
 
         <li class="nav-item">
           <a class="nav-link " href="/#projects" data-target="#projects"><span>Projects</span></a>
@@ -1647,6 +1651,32 @@
             <div class="isotope projects-container js-layout-masonry ">
 
             </div>
+
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+
+    <section id="work_experience" class="home-section wg-featured   "  >
+      <div class="container">
+
+
+
+
+        <div class="row">
+          <div class="col-12 col-lg-4 section-heading">
+            <h1>Work Experience</h1>
+
+          </div>
+          <div class="col-12 col-lg-8">
+
+
+
+
+
+
 
           </div>
         </div>
