--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 <!--  <meta property="og:site_name" content="Academic">-->
   <meta property="og:url" content="/">
   <meta property="og:title" content="Academic">
-  <meta property="og:description" content="Professor of Artificial Intelligence"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
+  <meta property="og:description" content="Software Engineer"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="linkedin:image" content="/images/Linkedin.png"><meta property="og:locale" content="en-us">
 
 
@@ -677,7 +677,7 @@
 
 
 
-      <img class="avatar avatar-circle" src="/author/nelson-bighetti/sojol_image.jpg" alt="Md. Aminul Islam">
+      <img class="avatar avatar-circle" src="/author/aminul-islam/sojol_image.jpg" alt="Md. Aminul Islam">
 
 
       <div class="portrait-title">
