--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
 <!--  <meta property="og:site_name" content="Academic">-->
   <meta property="og:url" content="/">
-  <meta property="og:title" content="Academic">
+  <meta property="og:title" content="Md. Aminul Islam">
   <meta property="og:description" content="Software Engineer"><meta property="og:image" content="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_2.png">
   <meta property="linkedin:image" content="/images/Linkedin.png"><meta property="og:locale" content="en-us">
 
