--- a/index.html
+++ b/index.html
@@ -1346,6 +1346,26 @@
 
 
 
+    <div class="col-12">
+      <h3>Scene Reconstruction From Multiple Static CCTV Cameras</h3>
+
+      <h4>Keywords: Scene Reconstruction, Missing Scene Construction, Video Processing, Object Monitoring, Object Tracking, Surveillance System</h4>
+
+      <img src="/images/thesis_image.png" alt="Flowchart of total system">
+
+      <p>Scene reconstruction from multiple CCTV cameras has a great impact on visual surveillance system, representing crime scene, and many other cases of
+        observation. There are some works on scene reconstruction but actually a little work on scene reconstruction from multiple CCTV cameras.
+        As visual surveillance systems collect a huge amount of data from many different scenes or surveillance cameras, people expect the total
+        activities of an object with little human labeling effort as possible. We propose an automated system that can analyze videos sent
+        from multiple cameras simultaneously, and present the information of an object to user in convenient and easy understandable form. Moreover,
+        if there is no camera at a place, we propose an algorithm to predict an object’s movement in that place using his past behaviours. The
+        persons who are in supervision of monitoring will get the work of them easier and more convenient than finding the object from lots of videos
+        manually by using this automated system.</p>
+
+      <h4> <a href = "https://github.com/aminul7506/Multivariate-Stock-Price-Prediction" target="_blank" rel="noopener">Github Code</a></span></h4>
+
+      <p>&nbsp;</p>
+    </div>
 
 
 
@@ -1439,7 +1459,7 @@
 
             </p>
 
-            <h4>Project code and details is available <a href = "https://github.com/aminul7506/StaySafe" target="_blank" rel="noopener">Github Code</a></span></h4>
+            <h4><a href = "https://github.com/aminul7506/StaySafe" target="_blank" rel="noopener">Github Code</a></span></h4>
 
             <p>&nbsp;</p>
           </div>
