--- a/index.html
+++ b/index.html
@@ -1351,7 +1351,7 @@
 
       <h4>Keywords: Scene Reconstruction, Missing Scene Construction, Video Processing, Object Monitoring, Object Tracking, Surveillance System</h4>
 
-      <img src="/images/thesis_image.png" alt="Flowchart of total system" style='float: left; height: 140px;'>
+      <img src="/images/thesis_image.png" alt="Flowchart of total system" style='float: left; height: 70%;'>
 
       <p>Scene reconstruction from multiple CCTV cameras has a great impact on visual surveillance system, representing crime scene, and many other cases of
         observation. There are some works on scene reconstruction but actually a little work on scene reconstruction from multiple CCTV cameras.
