--- a/index.html
+++ b/index.html
@@ -1286,9 +1286,13 @@
           <div class="col-12">
             <h3>Scene Reconstruction From Multiple Static CCTV Cameras</h3>
 
+            <h4>Supervisor: <a href="https://cse.buet.ac.bd/faculty_list/detail/mmislam">Dr. Md. Monirul Islam </a></h4>
+
+            <h4>Collaborator: <a href="https://www.linkedin.com/in/anwar-hossain-zahid-a46195108/">Anwar Hossain</a></h4>
+
             <h4>Keywords: Scene Reconstruction, Missing Scene Construction, Video Processing, Object Monitoring, Object Tracking, Surveillance System</h4>
 
-            <img src="/images/thesis_image.png" alt="Flowchart of total system" style='float: left; height: 500px; margin-right: 20px'>
+            <img src="/images/thesis_image.png" alt="Flowchart of total system" style='float: left; height: 600px; margin-right: 20px; margin-top: 10px;'>
 
             <p>Scene reconstruction from multiple CCTV cameras has a great impact on visual surveillance system, representing crime scene, and many other cases of
               observation. There are some works on scene reconstruction but actually a little work on scene reconstruction from multiple CCTV cameras.
