--- a/index.html
+++ b/index.html
@@ -1329,7 +1329,9 @@
           <div class="col-12 col-lg-8">
 
 
-
+            <h3>Software Engineer</h3>
+            <h4>Ridmik Labs Limited, Dhaka, Bangladesh</h4>
+            <h5>November 1, 2018 - Present</h5>
 
 
 
