--- a/index.html
+++ b/index.html
@@ -1326,7 +1326,7 @@
             <h1>Work Experience</h1>
 
           </div>
-          <div class="col-12 col-lg-8">
+          <div class="col-12">
 
 
             <h3>Software Engineer</h3>
