--- a/index.html
+++ b/index.html
@@ -1333,7 +1333,18 @@
             <h4>Ridmik Labs Limited, Dhaka, Bangladesh</h4>
             <h5>November 1, 2018 - Present</h5>
 
+            <h5>Boitoi Android Application</h5>
 
+            <p>A secured native android eBook reader with digital library.</p>
+
+            <ul>
+              <li>Worked in the complete development lifecycle of the application with successful launching and working on continuous updating.</li>
+              <li>Researched and worked on the security of the books stored in the device of an user.</li>
+            </ul>
+
+            <h4>Get it on <a href = "https://play.google.com/store/apps/details?id=ridmik.boitoi" target="_blank" rel="noopener">Google Play</a></span></h4>
+
+            <p>&nbsp;</p>
 
 
           </div>
