--- a/index.html
+++ b/index.html
@@ -1330,19 +1330,18 @@
 
 
             <h3>Software Engineer</h3>
-            <h4>Ridmik Labs Limited, Dhaka, Bangladesh</h4>
-            <h5>November 1, 2018 - Present</h5>
+            <h4>Ridmik Labs Limited, Dhaka, Bangladesh <br>  November 1, 2018 - Present</h4>
 
-            <h5>Boitoi Android Application</h5>
+            <h4>Boitoi Android Application</h4>
 
-            <p>A secured native android eBook reader with digital library.</p>
+            <p>A secure native android eBook reader with digital library.</p>
 
             <ul>
               <li>Worked in the complete development lifecycle of the application with successful launching and working on continuous updating.</li>
-              <li>Researched and worked on the security of the books stored in the device of an user.</li>
+              <li>Researched and worked on the security(standard encryption and decryption) of the books stored in the device of an user.</li>
             </ul>
 
-            <h4>Get it on <a href = "https://play.google.com/store/apps/details?id=ridmik.boitoi" target="_blank" rel="noopener">Google Play</a></span></h4>
+            <h4>Get Boitoi on <a href = "https://play.google.com/store/apps/details?id=ridmik.boitoi" target="_blank" rel="noopener">Google Play</a></span></h4>
 
             <p>&nbsp;</p>
 
