--- a/index.html
+++ b/index.html
@@ -1326,13 +1326,11 @@
             <h1>Work Experience</h1>
 
           </div>
+
+
           <div class="col-12">
-
-
             <h3>Software Engineer</h3>
             <h4>Ridmik Labs Limited, Dhaka, Bangladesh <br>  November 1, 2018 - Present</h4>
-
-
           </div>
 
           <div class="col-12">
@@ -1346,6 +1344,23 @@
             </ul>
 
             <h4>Get Boitoi on <a href = "https://play.google.com/store/apps/details?id=ridmik.boitoi" target="_blank" rel="noopener">Google Play</a></span></h4>
+
+            <p>&nbsp;</p>
+          </div>
+
+          <div class="col-12">
+            <h4>Boitoi iOS Application</h4>
+
+            <p>Boitoi is a secure native iOS eBook reader with digital library.</p>
+
+            <ul>
+              <li>Worked in the complete development lifecycle of the application with successful launching and is working on continuous updating.</li>
+              <li>Researched and worked on the security(standard encryption and decryption) of the books stored in the device of an user.</li>
+            </ul>
+
+            <h4>Get Boitoi on <a href = "https://apps.apple.com/us/app/boitoi-bangla-ebook-reader/id1505698833" target="_blank" rel="noopener">App Store</a></span></h4>
+
+            <p>&nbsp;</p>
 
           </div>
 
